[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://assets/world/character.svg" type="Texture" id=2]
[ext_resource path="res://src/LoginAndRegister/ColorPreview.gd" type="Script" id=3]
[ext_resource path="res://src/LoginAndRegister/CharacterListing.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Confirmation.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/LoginAndRegister/CharactersControl.gd" type="Script" id=6]
[ext_resource path="res://src/LoginAndRegister/NewCharacter.gd" type="Script" id=7]
[ext_resource path="res://src/LoginAndRegister/CharacterList.gd" type="Script" id=8]
[ext_resource path="res://src/World/ConnectedWorld.tscn" type="PackedScene" id=9]

[node name="CharactersControl" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -418.0
margin_top = -345.0
margin_right = 418.0
margin_bottom = 345.0
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
CharacterListing = ExtResource( 4 )
WorldScene = ExtResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 836.0
margin_bottom = 690.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 816.0
margin_bottom = 670.0
custom_constants/separation = 40

[node name="CharacterListing" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 796.0
margin_bottom = 406.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Character" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CharacterListing"]
margin_right = 350.0
margin_bottom = 406.0
rect_min_size = Vector2( 350, 406 )
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/CharacterListing/Character"]
visible = false
margin_right = 350.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CharacterListing/Character"]
visible = false
margin_right = 350.0
margin_bottom = 43.0
text = "Ababa"
align = 1

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/CharacterListing/Character"]
visible = false
margin_right = 350.0
margin_bottom = 43.0
text = "Login"

[node name="CharacterList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CharacterListing"]
margin_left = 370.0
margin_right = 370.0
margin_bottom = 406.0
custom_constants/separation = 20
script = ExtResource( 8 )

[node name="NewCharacter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 446.0
margin_right = 796.0
margin_bottom = 650.0
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NewCharacter"]
margin_right = 796.0
margin_bottom = 204.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer"]
margin_right = 796.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 107.0
margin_bottom = 48.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 796.0
margin_bottom = 53.0
size_flags_horizontal = 3
max_length = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="HBoxContainer" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer"]
margin_top = 73.0
margin_right = 796.0
margin_bottom = 141.0
size_flags_horizontal = 3
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/Color"]
margin_right = 67.0
margin_bottom = 68.0
rect_min_size = Vector2( 67, 67 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 3 )
red_path = NodePath("../../../../NewCharacter/VBoxContainer/Color/VBoxContainer/Red")
green_path = NodePath("../../../../NewCharacter/VBoxContainer/Color/VBoxContainer/Green")
blue_path = NodePath("../../../../NewCharacter/VBoxContainer/Color/VBoxContainer/Blue")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/Color"]
margin_left = 92.0
margin_right = 796.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Red" type="HSlider" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/Color/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 704.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="Green" type="HSlider" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/Color/VBoxContainer"]
modulate = Color( 0, 1, 0, 1 )
margin_top = 26.0
margin_right = 704.0
margin_bottom = 42.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="Blue" type="HSlider" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer/Color/VBoxContainer"]
modulate = Color( 0, 0, 1, 1 )
margin_top = 52.0
margin_right = 704.0
margin_bottom = 68.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 1.0

[node name="Create" type="Button" parent="MarginContainer/VBoxContainer/NewCharacter/VBoxContainer"]
margin_top = 161.0
margin_right = 796.0
margin_bottom = 204.0
text = "Create"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 836.0
margin_bottom = 690.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Confirmation" parent="CenterContainer" instance=ExtResource( 5 )]
visible = false
margin_left = 418.0
margin_top = 345.0
margin_right = 418.0
margin_bottom = 345.0
